apps/homerun2/components/demo-pitcher/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homerun2-demo-pitcher
  namespace: ${HOMERUN2_NAMESPACE:-homerun2}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - ${HOMERUN2_DEMO_PITCHER_HOSTNAME:-demo-pitcher}.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homerun2-demo-pitcher
          port: 80
